2005-06-02  Mike Kestner  <mkestner@novell.com>

	* generator/ConstFilenameGen.cs : new generatable for filename encoded
	const string marshaling
	* generator/Makefile.am : add new file
	* generator/SymbolTable.cs : add new gfilename types.
	* glib/Marshaller.cs : add new filename-encoded string marshalers.
	* gtk/FileSelection.custom : use FilenamePtrToString to marshal.
	* gtk/Gtk.metadata : map the FileSelector filename types to my new
	imaginary gfilename type.  [Fixes #74963]

2005-06-02  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom : only connect to Destroyed for managed subclasses
	and let the wrappers get disposed by the GC.

2005-06-01  Mike Kestner  <mkestner@novell.com>

	* glib/Value.cs : handle enum/flags types in Val.
	[Fixes #75112]

2005-06-01  Dan Winship  <danw@novell.com>

	* glib/Value.cs: Add a constructor and an explicit cast for
	string[] (using a G_TYPE_STRV boxed value).

	* generator/SymbolTable.cs (SymbolTable): Map GStrv to string[].
	(The mapping relies on the above GLib.Value magic, so it only
	works correctly for properties, but that's ok, because GStrv isn't
	a real type anyway and only shows up in the api files for
	G_TYPE_STRV properties.) Makes the Gtk.AboutDialog Artists,
	Authors, and Documenters properties show up.

	* gtk/Gtk.metadata: hide
	AboutDialog.Get/SetArtists/Authors/Documenters, which can't be
	used to implement the Artists/Authors/Documenters properties,
	because the generated code doesn't know to NULL-terminate the
	arrays.

2005-05-31  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : rework the weakref release mechanism to avoid a
	couple "resurrection" issues.

2005-05-25  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : remove crosspkgdir arg that causes trouble with
	newer pkgconfigs.

2005-05-24  Dan Winship  <danw@novell.com>

	* parser/gapi2xml.pl: Make the enum value parser do the right
	thing with parenthesized values ("FOO = (1 << 2)") and within-type