@@ -1,0 +1,18 @@
+<Type Name="ListBase+FilenameString" FullName="GLib.ListBase+FilenameString">
+  <TypeSignature Language="C#" Value="public class FilenameString" />
+  <AssemblyInfo>
+    <AssemblyName>glib-sharp</AssemblyName>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>System.Object</BaseTypeName>
+  </Base>
+  <Interfaces />
+  <Members>
+    
+  </Members>
+  <Docs>
+    <summary>Type for Filename encoded string element marshaling.</summary>
+    <remarks>Use this type as a List constructor element_type parameter to use filename-encoded string marshaling.</remarks>
+  </Docs>
+</Type>
