@@ -71,6 +71,7 @@
       <Type Name="TimeoutHandler" />
       <Type Name="LogLevelFlags" />
       <Type Name="TypeFundamentals" />
+      <Type Name="ListBase+FilenameString" />
     </Namespace>
     <Namespace Name="Pango">
       <Type Name="Attribute" />
