@@ -27,7 +27,7 @@
 				IntPtr raw_ret = gtk_file_chooser_get_filenames (Handle);
 				if (raw_ret == IntPtr.Zero)
 					return new string[0];
-				GLib.SList list = new GLib.SList (raw_ret, typeof (string));
+				GLib.SList list = new GLib.SList (raw_ret, typeof (GLib.ListBase.FilenameString));
 				string[] result = new string [list.Count];
 				for (int i = 0; i < list.Count; i++)
 					result [i] = (string) list [i];
@@ -75,7 +75,7 @@
 				IntPtr raw_ret = gtk_file_chooser_list_shortcut_folders (Handle);
 				if (raw_ret == IntPtr.Zero)
 					return new string[0];
-				GLib.SList list = new GLib.SList (raw_ret, typeof (string));
+				GLib.SList list = new GLib.SList (raw_ret, typeof (GLib.ListBase.FilenameString));
 				string[] result = new string [list.Count];
 				for (int i = 0; i < list.Count; i++)
 					result [i] = (string) list [i];
