@@ -1,5 +1,17 @@
 2005-06-02  Mike Kestner  <mkestner@novell.com>
 
+	* glib/ListBase.cs : add a nested class to support filename encoded
+	string element marshaling.
+	* gtk/Gtk.metadata : mark the filenames and folders as filename
+	encoded.
+	* gtk/FileChooserDialog.custom : use new ListBase.FilenameString type
+	for list element type of filenames and folders.
+	* gtk/FileChooserWidget.custom : use new ListBase.FilenameString type
+	for list element type of filenames and folders.
+	[Fixes #72701]
+
+2005-06-02  Mike Kestner  <mkestner@novell.com>
+
 	* generator/ConstFilenameGen.cs : new generatable for filename encoded
 	const string marshaling
 	* generator/Makefile.am : add new file
